--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "convex:dev": "convex dev",
+    "daemon:notifications": "tsx scripts/poll-notifications.ts",
+    "daemon:hivemind": "tsx scripts/hive-mind.ts",
+    "openclaw:sync-agents": "tsx scripts/openclaw-sync-agents.ts",
     "build": "next build",
     "start": "next start",
     "lint": "eslint"
@@ -27,6 +31,7 @@
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
     "tailwindcss": "^4",
+    "tsx": "^4.20.6",
     "typescript": "^5"
   }
 }
