--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
   "scripts": {
     "dev": "next dev",
     "convex:dev": "convex dev",
+    "stack:start": "concurrently -k -n convex,web,watcher,notify -c blue,green,magenta,cyan \"npm:convex:dev\" \"npm:dev\" \"npm:daemon:watcher\" \"npm:daemon:notifications\"",
     "daemon:notifications": "tsx scripts/poll-notifications.ts",
-    "daemon:hivemind": "tsx scripts/hive-mind.ts",
+    "daemon:watcher": "tsx scripts/watcher.ts",
+    "orchestrator:run": "tsx scripts/orchestrator.ts",
+    "orchestrator:heartbeat": "tsx scripts/heartbeat-orchestrator.ts --agent main",
+    "openclaw:setup-heartbeats": "tsx scripts/setup-heartbeat-crons.ts",
     "openclaw:sync-agents": "tsx scripts/openclaw-sync-agents.ts",
     "build": "next build",
     "start": "next start",
@@ -28,6 +32,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "concurrently": "^9.1.2",
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
     "tailwindcss": "^4",
