feat: enhance Kanban board UI and functionality
- Refactor KanbanBoard component for improved task display and drag-and-drop functionality.
- Introduce TaskCard component for better task representation.
- Update styles for task cards and columns for a more modern look.
- Add priority classification for tasks with visual indicators.
- Implement column accent colors for better visual distinction.
- Optimize drag-and-drop handling with clearer event management.

feat: improve NewTaskModal design and functionality

- Revamp NewTaskModal layout for better user experience.
- Add priority selection to task creation form.
- Enhance input fields with improved styling and accessibility.
- Reset priority to default after task creation.

feat: implement OpenClaw webhook integration

- Create HTTP router for handling OpenClaw lifecycle events.
- Add mutation for receiving OpenClaw events and updating task statuses accordingly.
- Implement event handling for task creation, progress, completion, and errors.

chore: add mission-control hook for OpenClaw events

- Create mission-control hook to send OpenClaw lifecycle events to a specified webhook.
- Implement handler for processing agent events and posting to the webhook.
- Provide configuration scripts for setting up the hook.

chore: add utility scripts for managing OpenClaw hooks

- Implement scripts for configuring and installing OpenClaw hooks.
- Add system status script to monitor and report on OpenClaw's operational state.

feat: add TopNav component for navigation

- Introduce TopNav component for improved site navigation.
- Implement responsive design for navigation links and authentication switcher.

--- a/package.json
+++ b/package.json
@@ -4,14 +4,19 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev:safe": "tsx scripts/dev-safe.ts",
     "convex:dev": "convex dev",
-    "stack:start": "concurrently -k -n convex,web,watcher,notify -c blue,green,magenta,cyan \"npm:convex:dev\" \"npm:dev\" \"npm:daemon:watcher\" \"npm:daemon:notifications\"",
+    "stack:start": "concurrently -n convex,web,watcher,notify -c blue,green,magenta,cyan \"npm:convex:dev\" \"npm:dev:safe\" \"npm:daemon:watcher\" \"npm:daemon:notifications\"",
+    "stack:services": "concurrently -n convex,watcher,notify -c blue,magenta,cyan \"npm:convex:dev\" \"npm:daemon:watcher\" \"npm:daemon:notifications\"",
     "daemon:notifications": "tsx scripts/poll-notifications.ts",
     "daemon:watcher": "tsx scripts/watcher.ts",
+    "stack:status": "tsx scripts/system-status.ts",
     "orchestrator:run": "tsx scripts/orchestrator.ts",
     "orchestrator:heartbeat": "tsx scripts/heartbeat-orchestrator.ts --agent main",
     "openclaw:setup-heartbeats": "tsx scripts/setup-heartbeat-crons.ts",
     "openclaw:sync-agents": "tsx scripts/openclaw-sync-agents.ts",
+    "openclaw:install-hook": "tsx scripts/install-openclaw-hook.ts",
+    "openclaw:configure-hook": "tsx scripts/configure-openclaw-hook.ts",
     "build": "next build",
     "start": "next start",
     "lint": "eslint"
