More updates, fixing wiring

--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "dev": "next dev",
     "dev:safe": "tsx scripts/dev-safe.ts",
     "convex:dev": "convex dev",
-    "stack:start": "concurrently -n convex,web,watcher,notify -c blue,green,magenta,cyan \"npm:convex:dev\" \"npm:dev:safe\" \"npm:daemon:watcher\" \"npm:daemon:notifications\"",
-    "stack:services": "concurrently -n convex,watcher,notify -c blue,magenta,cyan \"npm:convex:dev\" \"npm:daemon:watcher\" \"npm:daemon:notifications\"",
+    "stack:start": "concurrently -n convex,web,watcher,dispatch,notify -c blue,green,magenta,yellow,cyan \"npm:convex:dev\" \"npm:dev:safe\" \"npm:daemon:watcher\" \"npm:daemon:dispatch\" \"npm:daemon:notifications\"",
+    "stack:services": "concurrently -n convex,watcher,dispatch,notify -c blue,magenta,yellow,cyan \"npm:convex:dev\" \"npm:daemon:watcher\" \"npm:daemon:dispatch\" \"npm:daemon:notifications\"",
     "daemon:notifications": "tsx scripts/poll-notifications.ts",
     "daemon:watcher": "tsx scripts/watcher.ts",
+    "daemon:dispatch": "tsx scripts/task-dispatcher.ts",
     "stack:status": "tsx scripts/system-status.ts",
     "orchestrator:run": "tsx scripts/orchestrator.ts",
     "orchestrator:heartbeat": "tsx scripts/heartbeat-orchestrator.ts --agent main",
