feat: Mission Control v2 - Complete UI and agents integration
- Add AgentCard, AddAgentModal, AgentDetailTray components for agents page
- Add AddTaskModal for tasks page with Kanban board integration
- Implement Sidebar and TopNav navigation with Workflows link
- Fix layout to use min-h-full instead of calc()
- Add Convex backend integration with agents, tasks, activities schemas
- Implement OpenClaw integration for agent dispatch
- Add Mission Control runtime for agent orchestration
- Configure Tailwind and PostCSS properly
- Add HQ dashboard with workflow visualization
- Generate Convex types and API bindings
- All components type-check and build successfully

--- a/apps/cli/package.json
+++ b/apps/cli/package.json
@@ -3,7 +3,8 @@
   "version": "2.0.0",
   "private": true,
   "bin": {
-    "mmc": "./dist/index.js"
+    "mmctl": "./dist/index.js",
+    "motoko": "./dist/index.js"
   },
   "scripts": {
     "build": "tsup src/index.ts --format cjs --target node20 --outDir dist",
@@ -12,8 +13,12 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@motoko/agents": "workspace:*",
+    "@motoko/core": "workspace:*",
+    "@motoko/db": "workspace:*",
     "commander": "^12.0.0",
     "chalk": "^5.3.0",
+    "convex": "^1.31.7",
     "ora": "^8.0.0"
   },
   "devDependencies": {
