feat: add model options and normalization function
- Introduced `ModelOption` interface and `FALLBACK_MODELS` constant in models.ts.
- Added `normalizeThinkingModelId` function for model ID normalization.

chore: add ESLint configuration

- Created `eslint.config.mjs` for TypeScript and JavaScript linting with custom rules.

fix: update package.json scripts and dependencies

- Changed `clean` script to use `rimraf` instead of `rm -rf`.
- Added ESLint, globals, rimraf, and typescript-eslint as dev dependencies.

refactor: simplify Squad import in agents package

- Removed unused `Agent` import from `squad.ts`.

chore: update clean script in core package

- Modified `clean` script to use `rimraf` for consistency.

feat: enhance API with new operations

- Added new operations in `ops.ts` for overview and lease management.
- Implemented automation configuration queries and mutations in `settings.ts`.

feat: add task dispatch cancellation and state retrieval

- Introduced `cancelForTask` mutation in `taskDispatches.ts`.
- Added `getDispatchState` and `listDispatchStates` queries in `tasks.ts`.

chore: update package.json in db and ui packages

- Changed `clean` script to use `rimraf` for consistency across packages.

fix: update connectors and webhooks for cleaner logging

- Removed unused import in `connectors.ts`.
- Enhanced logging in `webhooks.ts` to include event details.

--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -17,7 +17,7 @@
     "dev": "tsup src/index.ts --format cjs,esm --dts --watch",
     "lint": "eslint src/",
     "type-check": "tsc --noEmit",
-    "clean": "rm -rf dist",
+    "clean": "rimraf dist",
     "db:dev": "convex dev",
     "db:deploy": "convex deploy",
     "db:seed": "convex run seed:seed"
