--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint": "turbo run lint",
     "lint:fix": "turbo run lint:fix",
     "type-check": "turbo run type-check",
-    "clean": "turbo run clean && rm -rf node_modules",
+    "clean": "turbo run clean && rimraf node_modules",
     "format": "prettier --write \"**/*.{ts,tsx,md,json}\"",
     "db:dev": "pnpm --filter @motoko/db db:dev",
     "db:deploy": "pnpm --filter @motoko/db db:deploy",
@@ -23,8 +23,12 @@
   "devDependencies": {
     "@turbo/gen": "^2.0.0",
     "concurrently": "^9.2.1",
+    "eslint": "^9.23.0",
+    "globals": "^16.4.0",
     "prettier": "^3.2.5",
+    "rimraf": "^6.0.1",
     "turbo": "^2.0.0",
+    "typescript-eslint": "^8.26.1",
     "typescript": "^5.4.0"
   },
   "packageManager": "pnpm@10.29.3",
