feat: Enhance RightSidebar and TaskDetailPanel with document handling and dispatch features
- Updated RightSidebar to utilize useQueries for fetching documents related to tasks.
- Improved document loading state management in RightSidebar.
- Refactored TaskDetailPanel to support document creation and display.
- Added automation configuration management in MissionControlRuntime for dispatch handling.
- Introduced smoke tests for convex queries and dispatch flow to ensure system reliability.
- Implemented new mutation for claiming dispatches for specific tasks in taskDispatches.

--- a/package.json
+++ b/package.json
@@ -16,6 +16,14 @@
     "db:dev": "pnpm --filter @motoko/db db:dev",
     "db:deploy": "pnpm --filter @motoko/db db:deploy",
     "db:seed": "pnpm --filter @motoko/db db:seed",
+    "smoke:convex": "node tooling/smoke/convex-query-smoke.mjs",
+    "smoke:elegant": "node tooling/smoke/convex-query-smoke.mjs --url https://elegant-chipmunk-882.convex.cloud",
+    "smoke:dispatch": "node tooling/smoke/dispatch-flow-smoke.mjs",
+    "smoke:dispatch:elegant": "node tooling/smoke/dispatch-flow-smoke.mjs --url https://elegant-chipmunk-882.convex.cloud",
+    "runtime:start": "pnpm --filter @motoko/cli build && node apps/cli/dist/index.js runtime start",
+    "runtime:start:elegant": "pnpm --filter @motoko/cli build && node apps/cli/dist/index.js runtime start --url https://elegant-chipmunk-882.convex.cloud",
+    "openclaw:sync-agents": "pnpm --filter @motoko/cli build && node apps/cli/dist/index.js runtime sync-agents --url https://elegant-chipmunk-882.convex.cloud",
+    "stack:elegant": "concurrently -n web,runtime -c green,magenta \"pnpm web:dev\" \"pnpm runtime:start:elegant\"",
     "web:dev": "pnpm --filter @motoko/web dev",
     "cli": "pnpm --filter @motoko/cli",
     "web": "pnpm --filter @motoko/web"
